// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm renders correctly 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform "
  />
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders error and message 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform error"
  />
  <div
    className="error-message"
  >
    Error message
  </div>
</form>
`;

exports[`InputForm renders focused input 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    autoFocus={true}
    className="inputform "
  />
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders input id 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform "
    id="testid"
  />
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders success 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform success"
  />
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders value 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform "
    value="textfortest"
  />
  <div
    className="error-message"
  />
</form>
`;
